[gd_scene load_steps=36 format=3 uid="uid://bl1l7lachdq0v"]

[ext_resource type="Script" path="res://Script/golem_boss.gd" id="1_evcho"]
[ext_resource type="Texture2D" uid="uid://fc0dfh2j4tcq" path="res://Assets/boss_golem/Character_sheet.png" id="1_pj7oi"]
[ext_resource type="Texture2D" uid="uid://cflqwyvdju78d" path="res://Assets/boss_golem/Laser_sheet.png" id="2_keery"]
[ext_resource type="Texture2D" uid="uid://ceu5qa1vya5y2" path="res://Assets/box.png" id="3_i8cwb"]
[ext_resource type="Texture2D" uid="uid://38iu86ldjb55" path="res://Assets/bar.png" id="3_vo8vr"]
[ext_resource type="Texture2D" uid="uid://cb43fyhbt0oil" path="res://Assets/lifeBar.png" id="4_cxmfs"]
[ext_resource type="Texture2D" uid="uid://ct1cdb2givrj5" path="res://Assets/black_goat_silhouette.png" id="7_sd18k"]
[ext_resource type="FontFile" uid="uid://clctmbqnt7im3" path="res://Assets/font/SuperLegendBoy-4w8Y.ttf" id="8_oqp1s"]
[ext_resource type="Script" path="res://Script/FiniteStateMachine.gd" id="9_nfrmq"]
[ext_resource type="Script" path="res://Script/Idle.gd" id="10_2t810"]
[ext_resource type="Script" path="res://Script/Follow.gd" id="11_nxmyc"]
[ext_resource type="Script" path="res://Script/melee_attack.gd" id="13_4ga6o"]
[ext_resource type="Script" path="res://Script/homing_missile.gd" id="14_tba7f"]
[ext_resource type="PackedScene" uid="uid://d3jqse2vhvp68" path="res://Entity/bullet.tscn" id="15_yjpbb"]
[ext_resource type="Script" path="res://Script/laser_beam.gd" id="16_b4rjg"]
[ext_resource type="Script" path="res://Script/armor_buff.gd" id="17_4h5bm"]
[ext_resource type="Script" path="res://Script/dash.gd" id="17_j8wi1"]
[ext_resource type="Script" path="res://Script/death.gd" id="18_icq5r"]
[ext_resource type="AudioStream" uid="uid://djwivwd5boy3m" path="res://Assets/Music/SlimeAttack.wav" id="20_biqgs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lttxy"]
radius = 7.0
height = 258.0

[sub_resource type="Animation" id="Animation_pki7c"]
resource_name = "laser"
length = 1.87501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/LaserBeam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.875, 1.125, 1.875),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"set_target"
}, {
"args": [],
"method": &"turn_on_laser"
}, {
"args": [],
"method": &"turn_off_laser"
}]
}

[sub_resource type="Animation" id="Animation_1ykmo"]
resource_name = "idle"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nt53r"]
resource_name = "glowing"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dlg4s"]
resource_name = "ranged_attack"
length = 1.12501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6ev8n"]
resource_name = "block"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5kw88"]
resource_name = "melee_attack"
length = 1.25001
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"player_take_damage"
}]
}

[sub_resource type="Animation" id="Animation_fory8"]
resource_name = "laser_cast"
length = 0.875013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nx5ku"]
resource_name = "armor_buff"
length = 1.25001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2vjf1"]
resource_name = "death"
length = 1.75001
loop_mode = 2
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_is465"]
resource_name = "bos_slained"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5t22i"]
_data = {
"armor_buff": SubResource("Animation_nx5ku"),
"block": SubResource("Animation_6ev8n"),
"boss_slained": SubResource("Animation_is465"),
"death": SubResource("Animation_2vjf1"),
"glowing": SubResource("Animation_nt53r"),
"idle": SubResource("Animation_1ykmo"),
"laser": SubResource("Animation_pki7c"),
"laser_cast": SubResource("Animation_fory8"),
"melee_attack": SubResource("Animation_5kw88"),
"ranged_attack": SubResource("Animation_dlg4s")
}

[sub_resource type="LabelSettings" id="LabelSettings_sb21g"]
font = ExtResource("8_oqp1s")

[sub_resource type="LabelSettings" id="LabelSettings_nxgaw"]
font = ExtResource("8_oqp1s")
font_size = 32

[sub_resource type="CircleShape2D" id="CircleShape2D_1yj3k"]
radius = 100.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jk2wy"]
radius = 11.0
height = 22.0

[node name="GolemBoss" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 2
script = ExtResource("1_evcho")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_pj7oi")
hframes = 10
vframes = 10

[node name="Pivot" type="Node2D" parent="."]
position = Vector2(2, -33)

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
position = Vector2(98, 17)
texture = ExtResource("2_keery")
vframes = 15
frame = 14

[node name="Area2D" type="Area2D" parent="Pivot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Area2D"]
position = Vector2(119, 1)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_lttxy")
disabled = true

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5t22i")
}
autoplay = "idle"

[node name="UI" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -296.0
offset_top = -66.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_i8cwb")

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI/TextureRect"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -7.5
offset_right = 135.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
max_value = 500.0
value = 400.0
fill_mode = 1
texture_under = ExtResource("3_vo8vr")
texture_progress = ExtResource("4_cxmfs")

[node name="Label" type="Label" parent="UI/TextureRect/TextureProgressBar"]
layout_mode = 1
offset_top = -23.0
offset_right = 200.0
text = "King Golem"
label_settings = SubResource("LabelSettings_sb21g")
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/TextureRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -79.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("7_sd18k")
expand_mode = 1

[node name="Label" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "-- Boss Slained --"
label_settings = SubResource("LabelSettings_nxgaw")

[node name="Debug" type="Label" parent="."]
offset_left = -25.0
offset_top = -67.0
offset_right = 25.0
offset_bottom = -44.0
text = "Debug"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_1yj3k")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-1, -5)
shape = SubResource("CapsuleShape2D_jk2wy")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("9_nfrmq")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_2t810")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_nxmyc")

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("13_4ga6o")

[node name="HomingMissile" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("14_tba7f")
bullet_node = ExtResource("15_yjpbb")

[node name="LaserBeam" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("16_b4rjg")

[node name="ArmorBuff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("17_4h5bm")

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("17_j8wi1")

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("18_icq5r")

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_biqgs")

[node name="DamageCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="Pivot/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
